--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,14 +16,20 @@
     --green-500: #04D361;
 
     --purple-300: #9F75FF;
-    --purple-300: #9164FA;
-    --purple-300: #8257E5;
-    --purple-300: #6F48C9;
+    --purple-400: #9164FA;
+    --purple-500: #8257E5;
+    --purple-600: #6F48C9;
 }
 
 @media(max-width: 1080px) {
     html {
-        font-size: 93.75%;
+        font-size: 93.75%; // 15px
+    }
+}
+
+@media(max-width: 720px) {
+    html {
+        font-size: 87.5%; // 14px
     }
 }
 
@@ -35,6 +41,13 @@ body, input, textarea, button {
     font: 500 1rem sams-serif;
     color: var(--gray-500)
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+    font-family: Lexend, sans-serif;
+    color: var(--gray-800)
+}
+
 
 h1 {
     font-size: 2rem;
